# lm-mastery

./: .gitattributes  .gitignore  README.md  diagnostic.py  eval_alko.py  eval_alko_local.py  eval_alko_ppl.py  eval_compare_wiki.py  eval_llama_local.py  pyproject.toml  run_alko_generate.py  run_alko_generate_big.py
01-pretraining-pipeline/: README.md  start.py
01-pretraining-pipeline/config/: alko2_llama1b_enhanced.json  alko_base.yaml
01-pretraining-pipeline/eval/: eval.py
01-pretraining-pipeline/results/tokenizer/: spm.model  spm.vocab
01-pretraining-pipeline/scripts/: build_corpus_big.py  build_corpus_big_v3.py  build_tokenizer.py  pack_dataset.py  pack_dataset_chunked.py  pack_dataset_o200k_harmony.py  prepare_data.py
01-pretraining-pipeline/train/: ds_zero2.json  ds_zero3.json  train_alko.py  train_alko_big.py  train_llama_baseline.py  train_with_tiktoken.py
02-finetuning-rlhf/: train_sft.py
alko/: __init__.py  configuration_alko.py  modeling_alko.py
alko.egg-info/: PKG-INFO  SOURCES.txt
alko2/: alko2_model_config.json  build_tokenizer.py  data_mixture.yaml  ds_zero2_gpu_only.json  ds_zero3.json  ds_zero3_optimized.json  make_corpus.py  pretrain.py  requirements.txt  run_pretrain.bat  run_pretrain.sh  run_pretrain_optimized.sh
classic/: gpt2.py  llama.py
notebooks/: DPO.ipynb  DPO_notebook.ipynb  GRPO_RL_notebook.ipynb  SFT_notebook.ipynb  comands.txt  export_to_HF.ipynb  questions_LLM.ipynb  wandb.ipynb
scripts/: chat_sft.py  chat_sft_v2.py  chat_sft_v3.py  diagnostic.py  dpo_train.py  eval_dpo_pairs.py  eval_ppl.py  eval_sft_ultra.py  eval_sft_ultra_v2.py  generate.py  get_sft_data.py  ppl_eval.py  pretrain_alko.py  pretrain_llama.py  push_to_hub.py  sft_continue_mix_v4.py  sft_continue_ultra_v2.py  sft_if_eval.py  sft_smoke.py  sft_train.py  test_from_hub.py  train_sft.py
shared/: requirements.txt
src/lm_mastery/: __init__.py
src/lm_mastery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lm_mastery/configs/: alko_base.yaml  train_llama_109m.yaml
(+21 files in other folders)
