[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lm-mastery"
version = "0.1.0"
description = "Language Model Training and Evaluation Toolkit"
authors = [{name = "LM Mastery Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.10.0",
    "pyarrow>=10.0.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
pretrain-alko = "scripts.pretrain_alko:main"
pretrain-llama = "scripts.pretrain_llama:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"