[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lm-mastery"
version = "0.1.0"
description = "Language Model Training and Evaluation Toolkit"
authors = [{name = "LM Mastery Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.3",
    "transformers>=4.42", 
    "datasets>=2.19",
    "accelerate>=0.31",
    "deepspeed>=0.14",
    "sentencepiece>=0.2",
    "tiktoken>=0.6",
    "tokenizers>=0.15",
    "evaluate>=0.4",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "trl>=0.8",
    "huggingface-hub>=0.20",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
pretrain-alko = "scripts.pretrain_alko:main"
pretrain-llama = "scripts.pretrain_llama:main"
train-sft = "scripts.train_sft:main"
sft-train = "scripts.sft_train:main"
push-to-hub = "scripts.push_to_hub:main"
test-from-hub = "scripts.test_from_hub:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"